--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <main>
         <div class="Timer">
           <h1 id="Message">Time to focus!</h1>
+          <img src="src\assets\Pomodoro.svg" alt="*" id="Tomato">
           <span id="Timer"></span>
           <button id="StartTimer">Start</button>
           <button id="StopTimer">Stop</button>
