fixed animations and sound

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <label for="BreakLength">Break length</label>
           <input class="TimerSettings" type="number" value="5" step="5" id="BreakLength" min="5"><label for="BreakLength">mins</label>
         </div>
+        <audio src="./src/assets/finish.wav" type="audio/wav" id="CompletedSound">Audio</audio>
         </main>
   </body>
 </html>
